<resources>
    <string name="CODABAR">CODABAR</string>
    <string name="CODE128">CODE128</string>
    <string name="CODE39">CODE39</string>
    <string name="CODE93">CODE93</string>
    <string name="EAN13">EAN13</string>
    <string name="EAN14">EAN14</string>
    <string name="EAN8">EAN8</string>
    <string name="GS1">GS1</string>
    <string name="ITF">ITF</string>
    <string name="Print_copys">Number of copies</string>
    <string name="Print_status">Printer status</string>
    <string name="Print_status_test">Printer status test</string>
    <string name="QR_CODE">QRcode</string>
    <string name="UPC_A">UPC-A</string>
    <string name="UPC_E">UPC-E</string>
    <string name="_main_connected">-connect success</string>
    <string name="_main_connected_fail">connect fail</string>
    <string name="_main_disconnect">disconnected</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="adapter_usbdevice">USB Device:</string>
    <string name="album">Album</string>
    <string name="anti_white">Anti white</string>
    <string name="app_name">AiPSoft Connect</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="barcode_print">Barcode Print</string>
    <string name="beeper_test">Beeper Test</string>
    <string name="bmp_limit_width">Limit width\n [In mm]:</string>
    <string name="bold">Bold</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="bottomsheet_action_expand_halfway">Expand halfway</string>
    <string name="btn_clk_sel_font">Click to choose the printed font</string>
    <string name="call_notification_answer_action">Answer</string>
    <string name="call_notification_answer_video_action">Video</string>
    <string name="call_notification_decline_action">Decline</string>
    <string name="call_notification_hang_up_action">Hang Up</string>
    <string name="call_notification_incoming_text">Incoming call</string>
    <string name="call_notification_ongoing_text">Ongoing call</string>
    <string name="call_notification_screening_text">Screening an incoming call</string>
    <string name="center">Center</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d/%2$d</string>
    <string name="chip_text">Chip text</string>
    <string name="choose_bluetooth_device">Choose Bluetooth Device</string>
    <string name="choose_picture_position">Image Position</string>
    <string name="choose_usb_device">Choose USB Device</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="cmdtype_cpcl">CPCL</string>
    <string name="cmdtype_esc">ESC</string>
    <string name="cmdtype_pin">PIN</string>
    <string name="cmdtype_tsc">TSC</string>
    <string name="cmdtype_zpl">ZPL</string>
    <string name="command_type">Command Type:</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">%1$s won\'t work unless you enable Google Play services.</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">%1$s won\'t run without Google Play services, which are missing from your device.</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_channel_name">Google Play services availability</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="common_google_play_services_unsupported_text">%1$s won\'t run without Google Play services, which are not supported by your device.</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">%1$s won\'t run unless you update Google Play services.</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">%1$s won\'t run without Google Play services, which are currently updating.</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="confirm_set_this_wifi">CONFIRM SET THIS WIFI</string>
    <string name="connect">Connect</string>
    <string name="connect_type">Connect Type:</string>
    <string name="connected">Connected</string>
    <string name="copy_toast_msg">Link copied to clipboard</string>
    <string name="cutter_test">Cutter Test</string>
    <string name="default_notification_channel_id">notification_channel</string>
    <string name="default_web_client_id">93826190470-75pae5rts449naqp2gtkmpfur61rpoan.apps.googleusercontent.com</string>
    <string name="density_setting">Density Setting:</string>
    <string name="dialog_back">Back</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_ok">OK</string>
    <string name="dialog_tip">Tip</string>
    <string name="dialog_title_chartset_setting">Chartset name settings</string>
    <string name="dialog_title_connected_devlist">Connected Device List</string>
    <string name="disconnect">Disconnect</string>
    <string name="double_height">Double Height</string>
    <string name="double_width">Double Width</string>
    <string name="enlarge">Enlarge:</string>
    <string name="error_icon_content_description">Error</string>
    <string name="exposed_dropdown_menu_content_description">Show dropdown menu</string>
    <string name="fab_transformation_scrim_behavior">com.google.android.material.transformation.FabTransformationScrimBehavior</string>
    <string name="fab_transformation_sheet_behavior">com.google.android.material.transformation.FabTransformationSheetBehavior</string>
    <string name="fallback_menu_item_copy_link">Copy link</string>
    <string name="fallback_menu_item_open_in_browser">Open in browser</string>
    <string name="fallback_menu_item_share_link">Share link</string>
    <string name="fcm_fallback_notification_channel_label">Miscellaneous</string>
    <string name="gcm_defaultSenderId">93826190470</string>
    <string name="google_api_key">AIzaSyCMuuuQj9OzkJEY_taH8zQRRFclf4og8uk</string>
    <string name="google_app_id">1:93826190470:android:2be9b65a32ae4aacd61507</string>
    <string name="google_crash_reporting_api_key">AIzaSyCMuuuQj9OzkJEY_taH8zQRRFclf4og8uk</string>
    <string name="google_storage_bucket">aipsoft-connect.appspot.com</string>
    <string name="headbar_back">Back</string>
    <string name="hide_bottom_view_on_scroll_behavior">com.google.android.material.behavior.HideBottomViewOnScrollBehavior</string>
    <string name="icon_content_description">Dialog Icon</string>
    <string name="image_print">Image Print</string>
    <string name="insert_sdcard_tip">Please Insert SDCard</string>
    <string name="item_view_role_description">Tab</string>
    <string name="label_gap">Label Gap:</string>
    <string name="label_setting">Label Setting</string>
    <string name="label_size">Label Size:</string>
    <string name="label_type">Label Type:</string>
    <string name="left">Left</string>
    <string name="main_discon_click_repeatedly">Device has been disconnected, no need to click repeatedly</string>
    <string name="main_pls_choose_device">Please choose a device</string>
    <string name="material_clock_display_divider">:</string>
    <string name="material_clock_toggle_content_description">Select AM or PM</string>
    <string name="material_hour_selection">Select hour</string>
    <string name="material_hour_suffix">%1$s o\'clock</string>
    <string name="material_minute_selection">Select minutes</string>
    <string name="material_minute_suffix">%1$s minutes</string>
    <string name="material_motion_easing_accelerated">cubic-bezier(0.4, 0.0, 1.0, 1.0)</string>
    <string name="material_motion_easing_decelerated">cubic-bezier(0.0, 0.0, 0.2, 1.0)</string>
    <string name="material_motion_easing_emphasized">path(M 0,0 C 0.05, 0, 0.133333, 0.06, 0.166666, 0.4 C 0.208333, 0.82, 0.25, 1, 1, 1)</string>
    <string name="material_motion_easing_linear">cubic-bezier(0.0, 0.0, 1.0, 1.0)</string>
    <string name="material_motion_easing_standard">cubic-bezier(0.4, 0.0, 0.2, 1.0)</string>
    <string name="material_slider_range_end">Range end,</string>
    <string name="material_slider_range_start">Range start,</string>
    <string name="material_timepicker_am">AM</string>
    <string name="material_timepicker_clock_mode_description">Switch to clock mode for the time input.</string>
    <string name="material_timepicker_hour">Hour</string>
    <string name="material_timepicker_minute">Minute</string>
    <string name="material_timepicker_pm">PM</string>
    <string name="material_timepicker_select_time">Select time</string>
    <string name="material_timepicker_text_input_mode_description">Switch to text input mode for the time input.</string>
    <string name="mtrl_badge_numberless_content_description">New notification</string>
    <string name="paired_devices">Paired</string>
    <string name="search_device">Search</string>
    <string name="tip_have_no_found_bluetooth_device">No Device</string>
    <string name="tip_have_no_paired_device">No paired device</string>
</resources>