<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@color/basic_item_bg"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:textSize="@dimen/text_size_large"
        android:textColor="@color/orange_color"
        android:background="@color/primary"
        android:padding="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/choose_bluetooth_device"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:textSize="@dimen/text_size_normal"
            android:padding="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/paired_devices"/>
        <Button
            android:id="@+id/btn_hide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:text="Hide_↑↑↑"
            android:layout_alignParentRight="true"/>
    </RelativeLayout>
    <View style="@style/BaseLine"/>
    <ListView
        android:id="@+id/lv_dialog_choose_bluetooth_device_paired_devices"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:divider="@color/stroke_gray_color"
        android:dividerHeight="1dp"/>
    <TextView
        android:textSize="@dimen/text_size_small"
        android:textColor="@color/hint_text_color"
        android:id="@+id/tv_dialog_choose_bluetooth_device_paired_devices_empty"
        android:padding="16dp"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tip_have_no_paired_device"/>
    <View style="@style/BaseLine"/>
    <View
        android:layout_marginTop="2dp"
        style="@style/BaseLine"/>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:textSize="@dimen/text_size_normal"
            android:id="@+id/tv_dialog_choose_bluetooth_device_search_device"
            android:padding="16dp"
            android:clickable="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/search_device"/>
        <ProgressBar
            android:layout_gravity="center"
            android:id="@+id/pb_dialog_choose_bluetooth_device_progress_bar"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginRight="16dp"
            style="@android:style/Widget.ProgressBar.Small"/>
    </FrameLayout>
    <View style="@style/BaseLine"/>
    <ListView
        android:id="@+id/lv_dialog_choose_bluetooth_device_found_devices"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:divider="@color/stroke_gray_color"
        android:dividerHeight="1dp"/>
    <TextView
        android:textSize="@dimen/text_size_small"
        android:textColor="@color/hint_text_color"
        android:id="@+id/tv_dialog_choose_bluetooth_device_found_devices_empty"
        android:padding="16dp"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tip_have_no_found_bluetooth_device"/>
</LinearLayout>
